keyfile: retry harder finding a suitable filename in writer()

Try harder to find a suitable filename by appending a counter
to the name.

https://bugzilla.gnome.org/show_bug.cgi?id=740738
(cherry picked from commit 3b1c5ee0fde05f2d7d786d474591f4d23d64284a)